Update permalinks on locales

--- a/locales/es-ES/roadmap.xlf
+++ b/locales/es-ES/roadmap.xlf
@@ -15,7 +15,7 @@ permalink: /roadmap/
 lang: en</source>
   <target xml:lang="es-ES">layout: default
 title:  "Roadmap"
-permalink: /roadmap/
+permalink: /es/roadmap/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
