--- a/locales/fr/participation.xlf
+++ b/locales/fr/participation.xlf
@@ -15,7 +15,7 @@ permalink: /participation/
 lang: en</source>
   <target xml:lang="fr">layout: default
 title:  "Participation"
-permalink: /participation/
+permalink: /fr/participation/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
