--- a/locales/hi-IN/faq.xlf
+++ b/locales/hi-IN/faq.xlf
@@ -15,7 +15,7 @@ permalink: /faq/
 lang: en</source>
   <target xml:lang="hi-IN">layout: default
 title:  "Frequently Asked Questions"
-permalink: /faq/
+permalink: /hi-IN/faq/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
