--- a/locales/hi-IN/leaderboard.xlf
+++ b/locales/hi-IN/leaderboard.xlf
@@ -15,7 +15,7 @@ permalink: /leaderboard/
 lang: en</source>
   <target xml:lang="hi-IN">layout: leaderboard
 title:  "Leaderboard"
-permalink: /leaderboard/
+permalink: /hi-IN/leaderboard/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
