--- a/locales/hi-IN/participation.xlf
+++ b/locales/hi-IN/participation.xlf
@@ -15,7 +15,7 @@ permalink: /participation/
 lang: en</source>
   <target xml:lang="hi-IN">layout: default
 title:  "Participation"
-permalink: /participation/
+permalink: /hi-IN/participation/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
