--- a/locales/id/leaderboard.xlf
+++ b/locales/id/leaderboard.xlf
@@ -15,7 +15,7 @@ permalink: /leaderboard/
 lang: en</source>
   <target xml:lang="id">layout: leaderboard
 title:  "Leaderboard"
-permalink: /leaderboard/
+permalink: /id/leaderboard/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
