--- a/locales/it/leaderboard.xlf
+++ b/locales/it/leaderboard.xlf
@@ -15,7 +15,7 @@ permalink: /leaderboard/
 lang: en</source>
   <target xml:lang="it">layout: leaderboard
 title:  "Leaderboard"
-permalink: /leaderboard/
+permalink: /it/leaderboard/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
