--- a/locales/ro/roadmap.xlf
+++ b/locales/ro/roadmap.xlf
@@ -15,7 +15,7 @@ permalink: /roadmap/
 lang: en</source>
   <target xml:lang="ro">layout: default
 title:  "Roadmap"
-permalink: /roadmap/
+permalink: /ro/roadmap/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
