--- a/locales/es-ES/faq.xlf
+++ b/locales/es-ES/faq.xlf
@@ -15,7 +15,7 @@ permalink: /faq/
 lang: en</source>
   <target xml:lang="es-ES">layout: default
 title:  "Frequently Asked Questions"
-permalink: /faq/
+permalink: /es/faq/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
