--- a/locales/es-ES/leaderboard.xlf
+++ b/locales/es-ES/leaderboard.xlf
@@ -15,7 +15,7 @@ permalink: /leaderboard/
 lang: en</source>
   <target xml:lang="es-ES">layout: leaderboard
 title:  "Leaderboard"
-permalink: /leaderboard/
+permalink: /es/leaderboard/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
