--- a/locales/es-ES/participation.xlf
+++ b/locales/es-ES/participation.xlf
@@ -15,7 +15,7 @@ permalink: /participation/
 lang: en</source>
   <target xml:lang="es-ES">layout: default
 title:  "Participation"
-permalink: /participation/
+permalink: /es/participation/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
