--- a/locales/es-ES/rust-hack.xlf
+++ b/locales/es-ES/rust-hack.xlf
@@ -17,14 +17,14 @@ ref: rust-hack
 parent: activities</source>
   <target xml:lang="es-ES">layout: page
 title:  "Dive Into Rust"
-permalink: /rust-hack/
+permalink: /es/rust-hack/
 lang: en
 ref: rust-hack
 parent: activities</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/developer-engagement/rust-hack/"</source>
-  <target xml:lang="es-ES">redirect_from: "/developer-engagement/rust-hack/"</target>
+  <target xml:lang="es-ES">redirect_from: "/es/developer-engagement/rust-hack/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">TOC</source>
