--- a/locales/fr/activities.xlf
+++ b/locales/fr/activities.xlf
@@ -17,14 +17,14 @@ ref: activities
 redirect_from: "/developer-engagement/"</source>
   <target xml:lang="fr">layout: default
 title:  "Activities"
-permalink: /activities/
+permalink: /fr/activities/
 lang: en
 ref: activities
-redirect_from: "/developer-engagement/"</target>
+redirect_from: "/fr/developer-engagement/"</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/experiments/"</source>
-  <target xml:lang="fr">redirect_from: "/experiments/"</target>
+  <target xml:lang="fr">redirect_from: "/fr/experiments/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">Activities</source>
@@ -102,7 +102,7 @@ When building features for hundreds of millions of Firefox users worldwide, itâ€
 </trans-unit>
 <trans-unit id="20">
   <source xml:lang="en-US">[Find out more](/test-pilot/).</source>
-  <target xml:lang="fr"></target>
+  <target xml:lang="fr">[Find out more](/fr/test-pilot/).</target>
 </trans-unit>
 <trans-unit id="21">
   <source xml:lang="en-US">{: .activity .text-muted}
@@ -116,7 +116,7 @@ With the emergence of multiprocess Firefox (e10s), we need to ensure featured ad
 </trans-unit>
 <trans-unit id="23">
   <source xml:lang="en-US">[Find out more](/e10s-addons/).</source>
-  <target xml:lang="fr"></target>
+  <target xml:lang="fr">[Find out more](/fr/e10s-addons/).</target>
 </trans-unit>
 <trans-unit id="24">
   <source xml:lang="en-US">{: .clear}
@@ -176,7 +176,7 @@ Rust is a systems programming language important to the future of the web.</sour
 </trans-unit>
 <trans-unit id="35">
   <source xml:lang="en-US">[Find out more](/rust-hack/).</source>
-  <target xml:lang="fr"></target>
+  <target xml:lang="fr">[Find out more](/fr/rust-hack/).</target>
 </trans-unit>
 <trans-unit id="36">
   <source xml:lang="en-US">{: .activity}
@@ -254,7 +254,7 @@ Web Compatibility, the ability for all Web content to run in all browsers, is im
 </trans-unit>
 <trans-unit id="51">
   <source xml:lang="en-US">[Find out more](/webcompat-sprint/).</source>
-  <target xml:lang="fr"></target>
+  <target xml:lang="fr">[Find out more](/fr/webcompat-sprint/).</target>
 </trans-unit>
 <trans-unit id="52">
   <source xml:lang="en-US">{: .clear}
