--- a/locales/fr/faq.xlf
+++ b/locales/fr/faq.xlf
@@ -15,7 +15,7 @@ permalink: /faq/
 lang: en</source>
   <target xml:lang="fr">layout: default
 title:  "Frequently Asked Questions"
-permalink: /faq/
+permalink: /fr/faq/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
