--- a/locales/fr/roadmap.xlf
+++ b/locales/fr/roadmap.xlf
@@ -15,7 +15,7 @@ permalink: /roadmap/
 lang: en</source>
   <target xml:lang="fr">layout: default
 title:  "Roadmap"
-permalink: /roadmap/
+permalink: /fr/roadmap/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
