--- a/locales/fr/test-pilot.xlf
+++ b/locales/fr/test-pilot.xlf
@@ -17,14 +17,14 @@ ref: test-pilot
 parent: activities</source>
   <target xml:lang="fr">layout: page
 title:  "Install Test Pilot"
-permalink: /test-pilot/
+permalink: /fr/test-pilot/
 lang: en
 ref: test-pilot
 parent: activities</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/experiments/test-pilot/"</source>
-  <target xml:lang="fr">redirect_from: "/experiments/test-pilot/"</target>
+  <target xml:lang="fr">redirect_from: "/fr/experiments/test-pilot/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">TOC</source>
