--- a/locales/hi-IN/roadmap.xlf
+++ b/locales/hi-IN/roadmap.xlf
@@ -15,7 +15,7 @@ permalink: /roadmap/
 lang: en</source>
   <target xml:lang="hi-IN">layout: default
 title:  "Roadmap"
-permalink: /roadmap/
+permalink: /hi-IN/roadmap/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
