--- a/locales/id/webcompat-sprint.xlf
+++ b/locales/id/webcompat-sprint.xlf
@@ -17,14 +17,14 @@ ref: webcompat-sprint
 parent: activities</source>
   <target xml:lang="id">layout: page
 title:  "Web Compatibility Sprint"
-permalink: /webcompat-sprint/
+permalink: /id/webcompat-sprint/
 lang: en
 ref: webcompat-sprint
 parent: activities</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/developer-engagement/webcompat-sprint/"</source>
-  <target xml:lang="id">redirect_from: "/developer-engagement/webcompat-sprint/"</target>
+  <target xml:lang="id">redirect_from: "/id/developer-engagement/webcompat-sprint/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">TOC</source>
