--- a/locales/pt-BR/webcompat-sprint.xlf
+++ b/locales/pt-BR/webcompat-sprint.xlf
@@ -17,14 +17,14 @@ ref: webcompat-sprint
 parent: activities</source>
   <target xml:lang="pt-BR">layout: page
 title:  "Web Compatibility Sprint"
-permalink: /webcompat-sprint/
+permalink: /pt/webcompat-sprint/
 lang: en
 ref: webcompat-sprint
 parent: activities</target>
 </trans-unit>
 <trans-unit id="2">
   <source xml:lang="en-US">redirect_from: "/developer-engagement/webcompat-sprint/"</source>
-  <target xml:lang="pt-BR">redirect_from: "/developer-engagement/webcompat-sprint/"</target>
+  <target xml:lang="pt-BR">redirect_from: "/pt/developer-engagement/webcompat-sprint/"</target>
 </trans-unit>
 <trans-unit id="3">
   <source xml:lang="en-US">TOC</source>
