--- a/locales/ro/leaderboard.xlf
+++ b/locales/ro/leaderboard.xlf
@@ -15,7 +15,7 @@ permalink: /leaderboard/
 lang: en</source>
   <target xml:lang="ro">layout: leaderboard
 title:  "Leaderboard"
-permalink: /leaderboard/
+permalink: /ro/leaderboard/
 lang: en</target>
 </trans-unit>
 <trans-unit id="2">
