Fix typo in assets folder (fixes #155)

--- a/404.md
+++ b/404.md
@@ -9,7 +9,7 @@ ref: 404
 # 404 - Page Not Found
 
 {: .left}
-![image](/asserts/img/rocket.png)
+![image](/assets/img/rocket.png)
 
 {: .p404}
 *"Not until we are lost do we begin to understand ourselves."*
