--- a/locales/fr/activities.xlf
+++ b/locales/fr/activities.xlf
@@ -54,8 +54,8 @@ _</source>
         <source xml:lang="en-US">Teach The Web</source>
       </trans-unit>
       <trans-unit id="13">
-        <source xml:lang="en-US">/asserts/img/icon-teach.svg</source>
-        <target xml:lang="fr">/asserts/img/icon-teach.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-teach.svg</source>
+        <target xml:lang="fr">/assets/img/icon-teach.svg</target>
       </trans-unit>
       <trans-unit id="14">
         <source xml:lang="en-US">teach</source>
@@ -115,8 +115,8 @@ _</source>
         <source xml:lang="en-US">Build The Web</source>
       </trans-unit>
       <trans-unit id="28">
-        <source xml:lang="en-US">/asserts/img/icon-build.svg</source>
-        <target xml:lang="fr">/asserts/img/icon-build.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-build.svg</source>
+        <target xml:lang="fr">/assets/img/icon-build.svg</target>
       </trans-unit>
       <trans-unit id="29">
         <source xml:lang="en-US">build</source>
@@ -178,8 +178,8 @@ _</source>
         <source xml:lang="en-US">Protect The Web</source>
       </trans-unit>
       <trans-unit id="44">
-        <source xml:lang="en-US">/asserts/img/icon-protect.svg</source>
-        <target xml:lang="fr">/asserts/img/icon-protect.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-protect.svg</source>
+        <target xml:lang="fr">/assets/img/icon-protect.svg</target>
       </trans-unit>
       <trans-unit id="45">
         <source xml:lang="en-US">protect</source>
