--- a/locales/it/activities.xlf
+++ b/locales/it/activities.xlf
@@ -69,8 +69,8 @@ _</target>
   <target xml:lang="it"></target>
 </trans-unit>
 <trans-unit id="13">
-  <source xml:lang="en-US">/asserts/img/icon-teach.svg</source>
-  <target xml:lang="it">/asserts/img/icon-teach.svg</target>
+  <source xml:lang="en-US">/assets/img/icon-teach.svg</source>
+  <target xml:lang="it">/assets/img/icon-teach.svg</target>
 </trans-unit>
 <trans-unit id="14">
   <source xml:lang="en-US">teach</source>
@@ -143,8 +143,8 @@ _</target>
   <target xml:lang="it"></target>
 </trans-unit>
 <trans-unit id="28">
-  <source xml:lang="en-US">/asserts/img/icon-build.svg</source>
-  <target xml:lang="it">/asserts/img/icon-build.svg</target>
+  <source xml:lang="en-US">/assets/img/icon-build.svg</source>
+  <target xml:lang="it">/assets/img/icon-build.svg</target>
 </trans-unit>
 <trans-unit id="29">
   <source xml:lang="en-US">build</source>
@@ -221,8 +221,8 @@ _</target>
   <target xml:lang="it"></target>
 </trans-unit>
 <trans-unit id="44">
-  <source xml:lang="en-US">/asserts/img/icon-protect.svg</source>
-  <target xml:lang="it">/asserts/img/icon-protect.svg</target>
+  <source xml:lang="en-US">/assets/img/icon-protect.svg</source>
+  <target xml:lang="it">/assets/img/icon-protect.svg</target>
 </trans-unit>
 <trans-unit id="45">
   <source xml:lang="en-US">protect</source>
