--- a/locales/pt-BR/activities.xlf
+++ b/locales/pt-BR/activities.xlf
@@ -60,8 +60,8 @@ _</source>
         <target xml:lang="pt-BR">Ensinar a Web</target>
       </trans-unit>
       <trans-unit id="13">
-        <source xml:lang="en-US">/asserts/img/icon-teach.svg</source>
-        <target xml:lang="pt-BR">/asserts/img/icon-teach.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-teach.svg</source>
+        <target xml:lang="pt-BR">/assets/img/icon-teach.svg</target>
       </trans-unit>
       <trans-unit id="14">
         <source xml:lang="en-US">teach</source>
@@ -129,8 +129,8 @@ _</source>
         <target xml:lang="pt-BR">Construir a Web</target>
       </trans-unit>
       <trans-unit id="28">
-        <source xml:lang="en-US">/asserts/img/icon-build.svg</source>
-        <target xml:lang="pt-BR">/asserts/img/icon-build.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-build.svg</source>
+        <target xml:lang="pt-BR">/assets/img/icon-build.svg</target>
       </trans-unit>
       <trans-unit id="29">
         <source xml:lang="en-US">build</source>
@@ -202,8 +202,8 @@ _</source>
         <target xml:lang="pt-BR">Proteja a Web</target>
       </trans-unit>
       <trans-unit id="44">
-        <source xml:lang="en-US">/asserts/img/icon-protect.svg</source>
-        <target xml:lang="pt-BR">/asserts/img/icon-protect.svg</target>
+        <source xml:lang="en-US">/assets/img/icon-protect.svg</source>
+        <target xml:lang="pt-BR">/assets/img/icon-protect.svg</target>
       </trans-unit>
       <trans-unit id="45">
         <source xml:lang="en-US">protect</source>
