Add Event guide (issue #217)

--- a/_data/l10n/en.yml
+++ b/_data/l10n/en.yml
@@ -3,6 +3,7 @@ site-title: 'Activate Mozilla'
 activities: 'Activities'
 participation: 'Participation'
 roadmap: 'Roadmap'
+eventguide: 'Event Guide'
 faq: 'FAQ'
 leaderboard: 'Leaderboard'
 languages: 'Languages'
