--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -3,6 +3,7 @@ site-title: 'Actívate en Mozilla'
 activities: 'Activities'
 roadmap: 'Cronograma'
 participation: 'Participación'
+eventguide: 'Event Guide'
 faq: 'FAQ'
 leaderboard: 'Leaderboard'
 languages: 'Idiomas'
