--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -2,6 +2,7 @@ lang-url: 'pt/'
 site-title: 'Activate Mozilla'
 activities: 'Activities'
 roadmap: 'Cronograma'
+eventguide: 'Event Guide'
 participation: 'Participação'
 faq: 'FAQ'
 leaderboard: 'Organizadores'
