Improvement, updating and addition of new translations for PT-BR

--- a/_data/l10n/pt.yml
+++ b/_data/l10n/pt.yml
@@ -1,17 +1,17 @@
 lang-url: 'pt/'
 site-title: 'Activate Mozilla'
-activities: 'Activities'
+activities: 'Atividades'
 roadmap: 'Cronograma'
-eventguide: 'Event Guide'
+eventguide: 'Guia de Evento'
 participation: 'Participação'
-faq: 'FAQ'
-leaderboard: 'Organizadores'
+faq: 'Perguntas Frequentes'
+leaderboard: 'Liderança'
 languages: 'Idiomas'
-submit-translation: 'Envie uma tradução/melhoria para esta página'
-twitter-text1: 'Compartilhar esta página no Twitter'
+submit-translation: 'Envie uma melhoria para esta página'
+twitter-text1: 'Compartilhe esta página no Twitter'
 twitter-text2: 'Estou colaborando para'
 twitter-text3: ' %40Mozilla Veja como é fácil contribuir também %23mozactivate'
-facebook-text: 'Compartilhar esta página no Facebook'
+facebook-text: 'Compartilhe esta página no Facebook'
 share: "Compartilhar"
 activate: "Activate"
-activate-description: "The Activate Mozilla campaign aims at the grassroots of volunteer contributions. We want to bring more clarity on what are the most important areas to contribute to at Mozilla right now by providing guidance to mobilizers on how to recruit contributors and create community around meaningful Mozilla projects."
+activate-description: "A campanha Activate Mozilla é focada em contribuições voluntárias. Queremos trazer mais clareza sobre quais são as áreas mais importantes para contribuir na Mozilla agora, fornecendo orientação aos mobilizadores sobre como recrutar contribuidores e criar uma comunidade em torno de projetos significativos da Mozilla."
