WIP: Create impact page

--- a/_data/l10n/pt-BR.yml
+++ b/_data/l10n/pt-BR.yml
@@ -15,3 +15,4 @@ facebook-text: 'Compartilhe esta página no Facebook'
 share: "Compartilhar"
 activate: "Activate"
 activate-description: "A campanha Activate Mozilla é focada em contribuições voluntárias. Queremos trazer mais clareza sobre quais são as áreas mais importantes para contribuir na Mozilla agora, fornecendo orientação aos mobilizadores sobre como recrutar contribuidores e criar uma comunidade em torno de projetos significativos da Mozilla."
+impact: "Impact"
