--- a/_data/l10n/es.yml
+++ b/_data/l10n/es.yml
@@ -15,3 +15,4 @@ facebook-text: 'Compartir esta página en Facebook'
 share: "Compartir"
 activate: "Activate"
 activate-description: "The Activate Mozilla campaign aims at the grassroots of volunteer contributions. We want to bring more clarity on what are the most important areas to contribute to at Mozilla right now by providing guidance to mobilizers on how to recruit contributors and create community around meaningful Mozilla projects."
+impact: "Impact"
